fixed last question win condition

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 Every incorrect answer subtracts 5 seconds off your time. Good Luck!</p>
             <button class="start-button">Start</button>
         </section>
+        <section>
+            <h3 id = "feedback"></h3>
+        </section>
 
 
 
