add initials to save highscore

--- a/index.html
+++ b/index.html
@@ -10,23 +10,35 @@
 
 <body>
     <main class="container">
+        
         <div class="navhighscore">
             <h1 class="inline">High Score:</h1>
             <p class="highscore inline">0</p>
         </div>
+
         <div class="timer-text">
             <div class="timer-count">45</div>
             <h1>seconds remaining</h1>
         </div>
+
         <section class="quiz">
             <h2>Coding Quiz</h2>
             <p>Take the quiz and get your all time high score! You have 30 seconds to complete the quiz. Be careful:
                 Every incorrect answer subtracts 5 seconds off your time. Good Luck!</p>
             <button class="start-button">Start</button>
         </section>
+
+        <form id="initials">
+            <label for="initials-text">Add your initials: </label>
+            <br>
+            <input type="text" maxlength="3" name="initials-text" id="initials-text" />
+        </form>
+
         <section>
-            <h3 id = "feedback"></h3>
+            <h3 id="feedback"></h3>
         </section>
+
+
 
 
 
