Add rendered display of initials and highscore

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main class="container">
-        
+
         <div class="navhighscore">
             <h1 class="inline">High Score:</h1>
             <p class="highscore inline">0</p>
@@ -29,7 +29,7 @@
         </section>
 
         <form id="initials">
-            <label for="initials-text">Add your initials: </label>
+            <label for="initials-text">Add your initials and press enter to continue: </label>
             <br>
             <input type="text" maxlength="3" name="initials-text" id="initials-text" />
         </form>
