add display highscores w/ initials and added styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="timer-text">
-            <div class="timer-count">45</div>
+            <div class="timer-count">30</div>
             <h1>seconds remaining</h1>
         </div>
 
@@ -29,8 +29,7 @@
         </section>
 
         <form id="initials">
-            <label for="initials-text">Add your initials and press enter to continue: </label>
-            <br>
+            <label for="initials-text">Add your initials: </label>
             <input type="text" maxlength="3" name="initials-text" id="initials-text" />
         </form>
 
