add more time to timer, changed name to Javascript Quiz

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
 
         <div class="timer-text">
-            <div class="timer-count">30</div>
+            <div class="timer-count">45</div>
             <h1>seconds remaining</h1>
         </div>
 
         <section class="quiz">
-            <h2>Coding Quiz</h2>
-            <p>Take the quiz and get your all time high score! You have 30 seconds to complete the quiz. Be careful:
+            <h2>Javascript Quiz</h2>
+            <p>Take the quiz and get your all time high score! You have 45 seconds to complete the quiz. Be careful:
                 Every incorrect answer subtracts 5 seconds off your time. Good Luck!</p>
             <button class="start-button">Start</button>
         </section>
